--- a/src/main/resources/templates/auditWork/prorosalStage/taskAssign1.html
+++ b/src/main/resources/templates/auditWork/prorosalStage/taskAssign1.html
@@ -120,7 +120,7 @@
             rw +=renwu+"-";
         })
         $.ajax({
-            url:"fenpeirenwu",
+            url:"fenpeirenwu1",
             dataType:"json",
             data:{rw:rw,people:people,ppid:ppid},
             type:"post",
