--- a/src/main/resources/templates/auditors/index.html
+++ b/src/main/resources/templates/auditors/index.html
@@ -119,7 +119,7 @@
 						<a href="#subPages3" data-toggle="collapse" class="collapsed"><i class="lnr lnr-file-empty"></i> <span>现场检查阶段</span> <i class="icon-submenu lnr lnr-chevron-left"></i></a>
 						<div id="subPages3" class="collapse ">
 							<ul class="nav">
-								<li><a href="javascript:void(0);" onclick="addTab('进场会','inmeeting')" >进场会</a></li>
+								<li><a href="javascript:void(0);" onclick="addTab('进场会','toinmeeting')" >进场会</a></li>
 								<li><a href="javascript:void(0)" onclick="addTab('离场会议','outmetting')">离场会议</a></li>
 								<li><a href="javascript:void(0)" onclick="addTab('现场检查结果','insiteresult')">现场检查结果</a></li>
 								<li><a href="javascript:void(0)" onclick="addTab('稽核清单','list')">稽核清单</a></li>
@@ -140,8 +140,8 @@
 							</ul>
 						</div>
 					</li>
-					<li><a href="javascript:void(0);" onclick="addTab('审计计划管理','auditplanpro')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
-					<li><a href="javascript:void(0);" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-alarm"></i> <span>审计项目</span></a></li>
+					<li><a href="javascript:void(0);" onclick="addTab('审计计划管理','auditPlan')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>
+					<li><a href="javascript:void(0);" onclick="addTab('审计项目','toauditp')"><i class="lnr lnr-alarm"></i> <span>审计项目</span></a></li>
 					<!--<li><a href="javascript:void(0)" onclick="addTab('审计计划管理','riskmatrix')"><i class="lnr lnr-alarm"></i> <span>审计计划管理</span></a></li>-->
 					<!--<li><a href="javascript:void(0)" onclick="addTab('被审单位管理','auditedmanage')"><i class="lnr lnr-text-format"></i> <span>被审单位管理</span></a></li>-->
 					<!--<li><a href="javascript:void(0)" onclick="addTab('审计项目','auditpro')"><i class="lnr lnr-linearicons"></i> <span>审计项目</span></a></li>-->
