--- a/src/main/resources/templates/auditWork/prorosalStage/auditScheme1.html
+++ b/src/main/resources/templates/auditWork/prorosalStage/auditScheme1.html
@@ -56,7 +56,7 @@
         </div>
     <div style="margin-top: 20px;">
             <div style="text-align:center;width: 425px;height: 200px;border: 1px solid black;margin-left: 225px;float: left;">
-                <div style="background-color: #6ab8f7;border: 1px solid black;width: 425px;height:30px">项目成员</div>
+                <div style="background-color: #6ab8f7;border: 1px solid black;width: 425px;height:30px">项目成员<button onclick="bianjirole()">编辑</button></div>
                 <div>
                     <table id="prorol" border="1px" style="width: 400px;margin: 0 auto;margin-top: 10px;">
                         <tr>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div style="text-align:center;width: 425px;height: 200px;border: 1px solid black;margin-left:50px;float: left;">
-                <div style="background-color: #6ab8f7;border: 1px solid black;width: 425px;height:30px">任务分配</div>
+                <div style="background-color: #6ab8f7;border: 1px solid black;width: 425px;height:30px">任务分配<button onclick="bianjirenwu()">编辑</button></div>
                 <div>
                     <table border="1px" style="width: 400px;margin: 0 auto;margin-top: 10px;">
                         <tr>
@@ -89,13 +89,30 @@
             </div>
     </div>
 </div>
-<div style="margin-top: 220px;width: 100%;text-align: center;">
-    <div>补充说明：</div><textarea id="des" style="width: 800px;height: 100px;"></textarea>
-</div>
 <div style="margin-top: 20px;width: 1000px;text-align: right;">
     <button class="btn-info" style="margin-right: 20px;" onclick="baocun()">保存</button><button class="btn-info">取消</button><button class="btn-info"  style="margin-left: 20px;" onclick="tijiaoshenhe()">提交审核</button>
 </div>
+<div id="bianjirole" class="easyui-dialog" title="编辑角色" style="width:1280px;height:680px;padding: 30px;"
+     data-options="resizable:true,modal:true,closed:true,top:50">
+    <iframe name="shengjiiframe" id="bianjiroleiframe" scrolling="auto" frameborder="0" style="width:100%;height:650px;"></iframe>
+</div>
+<div id="bianjirenwu" class="easyui-dialog" title="编辑任务" style="width:1280px;height:680px;padding: 30px;"
+     data-options="resizable:true,modal:true,closed:true,top:50">
+    <iframe name="shengjiiframe" id="bianjirenwuiframe" scrolling="auto" frameborder="0" style="width:100%;height:650px;"></iframe>
+</div>
 <script th:inline="javascript">
+    function bianjirenwu(){
+        var url = "totask1";
+        $("#bianjirenwuiframe").attr("src",url);
+        $("#bianjirenwu").dialog("open");
+    }
+    function bianjirole(){
+        var ppid = [[${session.a.ppId}]];
+        var ppjd = [[${session.a.ppJd}]];
+        var url = "torole1?ppid="+ppid+"&ppjd="+ppjd;
+        $("#bianjiroleiframe").attr("src",url);
+        $("#bianjirole").dialog("open");
+    }
     var fanganid = "";
     function baocun(){
         var id = $("#projectid").val();
