--- a/src/main/resources/templates/auditWork/insite/inmeeting.html
+++ b/src/main/resources/templates/auditWork/insite/inmeeting.html
@@ -115,7 +115,8 @@
                 success: function (data) {
                     $("#filetable").append("<tr><td height='30px;'>"+data.filename+"</td><td>"+data.shangchuantime+"</td><td><a href='javascript:void(0)' onclick='del("+data.id+")'>删除</a><a href='javascript:void(0)' class='button' onclick='xiazai("+data.id+")'>下载</a></td></tr>");
                     alert("文件上传成功");
-                    $("#file").val() == "";
+                    $("#file").text() == "";
+                    $("#filedialog").dialog("close");
                 }
             })
         }
